--- a/src/resources/views/courses/show.hbs
+++ b/src/resources/views/courses/show.hbs
@@ -6,7 +6,7 @@
         <div class="col-lg-9">
             <h2>{{course.name}}</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/{{course.videoId}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <p>Một ứng dụng Back-end hiện đại có thể rất phức tạp, việc sử dụng code thuần (tự tay code từ đầu) không phải là một lựa chọn tốt. Vì vậy các Libraries và Frameworks ra đời</p>
+            <p>{{course.description}}</p>
         </div>
     </div>
 </div>
