--- a/src/resources/views/me/trash-courses.hbs
+++ b/src/resources/views/me/trash-courses.hbs
@@ -1,6 +1,6 @@
 <div class="mt-4">
-    <h3>Khóa học của tôi</h3>
-    <a href="/me/trash/courses">Thùng rác</a>
+    <h3>Khóa học đã xóa</h3>
+    <a href="/me/stored/courses">Danh sách khóa học</a>
     <table class="table mt-4">
         <thead>
             <tr>
@@ -18,13 +18,13 @@
             <td>{{this.level}}</td>
             <td>{{this.createdAt}}</td>
             <td>
-                <a class="btn btn-link" href="/courses/{{this._id}}/edit">Sửa</a>
-                <a class="btn btn-link" href="" data-toggle="modal" data-id="{{this._id}}" data-target="#delete-course-modal">Xóa</a>
+                <a href="" class="btn btn-link btn-restore" data-id="{{this._id}}">Khôi phục</a>
+                <a href="" class="btn btn-link" data-toggle="modal" data-id="{{this._id}}" data-target="#delete-course-modal">Xóa vĩnh viễn</a>
             </td>
             </tr>
             {{else}}
-            <tr><td colspan="5" class="text-center">Bạn chưa đăng khóa học nào
-              <a href="/courses/create">Đăng khóa học</a>
+            <tr><td colspan="5" class="text-center">Thùng rác trống
+              <a href="/me/stored/courses">Danh sách khóa học</a>
             </td></tr>
               {{/each}}
         </tbody>
@@ -50,22 +50,34 @@
     </div>
   </div>
 </div>
-{{!-- Delete form --}}
+
 <form name="delete-course-form" method="POST"></form>
+<form name="restore-course-form" method="POST"></form>
 <script>
   document.addEventListener('DOMContentLoaded', function(){
     var courseId
     var deleteForm = document.forms['delete-course-form'];
+     var btnDeleteCourse= document.getElementById('btn-delete-course')
+    var restoreForm = document.forms['restore-course-form'];
+    var restoreBtn = $('.btn-restore');
+
 
     $('#delete-course-modal').on('show.bs.modal', function (event) {
       var button = $(event.relatedTarget) // Button that triggered the modal
      courseId = button.data('id') // Extract info from data-* attributes
 
       })
-    var btnDeleteCourse= document.getElementById('btn-delete-course')
+   
     btnDeleteCourse.onclick = function() {
-      deleteForm.action = '/courses/' + courseId + '?_method=DELETE'
+      deleteForm.action = '/courses/' + courseId + '/force?_method=DELETE'
       deleteForm.submit()
    }
+
+    restoreBtn.click(function(e) {
+      e.preventDefault();
+      var courseId = $(this).data('id')
+      restoreForm.action = '/courses/' + courseId + '/restore?_method=PATCH'
+      restoreForm.submit()
+    })
 })
 </script>
