--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -15,9 +15,22 @@
         <div class="container">{{{body}}}
         {{> footer}}
         </div>
+        	<div id="chatbot"></div>	
     </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link
+        href="https://chatbot-widget-code-hues.s3.ap-southeast-1.amazonaws.com/static/css/2.0f90d5d4.chunk.css"
+        rel="stylesheet"
+    />
+    <link
+        href="https://chatbot-widget-code-hues.s3.ap-southeast-1.amazonaws.com/static/css/main.99bfad86.chunk.css"
+        rel="stylesheet"
+    />
+
+    <script src="https://chatbot-widget-code-hues.s3.ap-southeast-1.amazonaws.com/static/js/2.fe39a021.chunk.js"></script>
+    <script src="https://chatbot-widget-code-hues.s3.ap-southeast-1.amazonaws.com/static/js/main.ba60b89a.chunk.js"></script>
+    <script src="https://chatbot-widget-code-hues.s3.ap-southeast-1.amazonaws.com/static/js/runtime-main.09897855.js"></script>
 </body>
 </html>
