--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -29,8 +29,8 @@
         rel="stylesheet"
     />
 
-    <script src="https://chatbot-widget-code-hues.s3.ap-southeast-1.amazonaws.com/static/js/2.fe39a021.chunk.js"></script>
+    {{!-- <script src="https://chatbot-widget-code-hues.s3.ap-southeast-1.amazonaws.com/static/js/2.fe39a021.chunk.js"></script>
     <script src="https://chatbot-widget-code-hues.s3.ap-southeast-1.amazonaws.com/static/js/main.ba60b89a.chunk.js"></script>
-    <script src="https://chatbot-widget-code-hues.s3.ap-southeast-1.amazonaws.com/static/js/runtime-main.09897855.js"></script>
+    <script src="https://chatbot-widget-code-hues.s3.ap-southeast-1.amazonaws.com/static/js/runtime-main.09897855.js"></script> --}}
 </body>
 </html>
